Fix changes from last commit. Add margin to menu on public menu page. Ensures menu description has enough space on smaller devices.

--- a/app/assets/stylesheets/public_pages.scss
+++ b/app/assets/stylesheets/public_pages.scss
@@ -345,7 +345,7 @@ label {
 }
 
 .menu-info {
-  height: 300px;
+  height: 100%;
   padding-top: 100px;
   margin-bottom: 10px;
   text-align:center;
@@ -360,6 +360,7 @@ label {
 }
 
 #pub-menu {
+  margin-top:50px;
   padding-bottom: 5%;
 }
 
